feat: initialization baselines

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,8 @@ repos:
         entry: black
         language: system
         types: [python]
+        args:
+        -   "--diff"
 
 -   repo: local
     hooks:
