style: adding mypy back to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,14 +27,13 @@ repos:
         language: system
         types: [python]
 
-# Cutting this hook until we start polishing the repo
-#- repo: local
-#  hooks:
-#  - id: mypy
-#    name: mypy
-#    entry: mypy
-#    language: system
-#    types: [python]
-#    args:
-#    -   "--ignore-missing-imports"
-#    -   "--show-error-codes"
+- repo: local
+  hooks:
+  - id: mypy
+    name: mypy
+    entry: mypy
+    language: system
+    types: [python]
+    args:
+    -   "--ignore-missing-imports"
+    -   "--show-error-codes"
